Adds support for non-IBM 16-byte sectors, which adda support for VTDOS 3.0.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,5 +82,6 @@
         "tusb_fifo.h": "c",
         "file.h": "c",
         "video.h": "c"
-    }
+    },
+    "cortex-debug.variableUseNaturalFormat": false
 }
