Adds support for the Radio Shack Double Density Adapter.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,5 +89,5 @@
         "util.h": "c",
         "ticks.h": "c"
     },
-    "cortex-debug.variableUseNaturalFormat": true
+    "cortex-debug.variableUseNaturalFormat": false
 }
